--- a/app/src/main/res/layout/activity_dummy_activity.xml
+++ b/app/src/main/res/layout/activity_dummy_activity.xml
@@ -8,11 +8,8 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <include layout="@layout/activity_main2" />
+
+    <include layout="@layout/activity_temp_activity" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -26,7 +23,7 @@
 
     </android.support.design.widget.NavigationView>
 
-    <com.github.mikephil.charting.charts.BarChart
+    <!--<com.github.mikephil.charting.charts.BarChart
         android:id="@+id/bar_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -34,8 +31,7 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
 
 
 </android.support.v4.widget.DrawerLayout>
-
