--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -80,20 +80,17 @@
                 android:layout_marginStart="26dp"
                 android:layout_toEndOf="@+id/consumer"
                 android:layout_toRightOf="@+id/consumer"
-                android:text="Untied America"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/mobi"
                 android:layout_alignBottom="@+id/mobi"
-                android:layout_alignEnd="@+id/textView4"
-                android:layout_alignLeft="@+id/textView4"
-                android:layout_alignRight="@+id/textView4"
                 android:layout_alignStart="@+id/textView4"
-                android:text="0000000000"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                tools:text="9090909090" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -199,7 +196,6 @@
                 android:layout_alignLeft="@+id/textView12"
                 android:layout_alignStart="@+id/textView12"
                 android:layout_alignTop="@+id/textView7"
-                android:text="2400/-"
                 android:textSize="20sp" />
 
             <TextView
@@ -221,7 +217,6 @@
                 android:layout_toEndOf="@+id/textView10"
                 android:layout_toRightOf="@+id/textView10"
                 android:textColor="#00FF00"
-                android:text="300 Unit"
                 android:textSize="20sp" />
 
 
